package bigtalkdesignMod.v28.v28_4;

public abstract class Action {
    public abstract void getManConclusion(Man concreteElementA);

    public abstract void getWomanConclusion(Woman concreteElementB);
}
