package bigtalkdesignMod.v28.v28_4;

public abstract class Person {
    public abstract void accept(Action visitor);
}
